# quizzy

./: .gitignore  Cargo.toml  LICENSE  README.md  econ.txt  example.txt  importing.md  response.html
.github/workflows/: ci.yml  release.yml
benches/: mc_bench.rs
examples/: compSciFundamentals.tsv  introToRust.json  spanishPhrases.txt  tutorial.csv  worldCapitals.csv
src/: main.rs
src/core/: deck.rs  import.rs  learn.rs  mod.rs  storage.rs  string_distance.rs
src/storage/: storage.rs
src/ui/: cards.rs  gamble.rs  general.rs  input.rs  learn.rs  mod.rs  stats.rs
